apps/dev/orbit/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orbit-web
  namespace: orbit-dev
spec:
  selector:
    app: orbit-web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
